# wavelet

./: .gitignore  BLOCKING_TASKS.md  CHANGELOG.md  CI_BEST_PRACTICES.md  CLAUDE.md  COMPETITOR_ANALYSIS.md  Cargo.toml  GRAPHICAL_ENV_GUIDE.md  README.md  SCREENSHOT_GUIDE.md  STEAMWORKS.md  STEAM_PREPARE.md  TONVERK_CHECKLIST.md  TONVERK_FULL_CHECKLIST.md  TONVERK_OFFICIAL.md  TRAILER_NARRATION.md  TRAILER_SCRIPT.md  TWEET_DRAFT_JA.md  VIDEO_RECORDING_GUIDE.md  WAVELET_WORKFLOW.md  WEEK1_STATUS.md  WEEK4_CHECKLIST.md  capture_screenshots.py  ci-monitor.sh  generate_steam_assets.py  launch.sh
.git-hooks/: pre-push
.github/workflows/: ci.yml
backend/: .env  .env.example  API.md  Cargo.toml  test_api.sh
backend/.sqlx/: query-0a71ecf3151e54c8f634184b8509b2c9b8849e3c5232dd23a381896c5f4b0edb.json  query-1a18785aa6b53c1c9d75330bf0b9843f37cbd8367ca44d42b008a10631facb87.json  query-29585a139fa05d628fbd05672b99fdde120185e12883a357768a603d66171e1c.json  query-533c09b02c9230ce9533c58ed2486d1eab27ef11ee362080327e079ba1de5ccb.json  query-54cf51e604237e182acd8510f58b67e56ebc17e3cde1287c469164d580f1e1a7.json  query-5a330b00fb2eaa296d276edb22c0d11293498845e425e510a2bcd3f9a7198044.json  query-60c47385e8ff3409e32707af1bf61ce13b7aac5448b7ba9f6f2f8201431274bc.json  query-6ee425093d043a4ebdf4ec3af49dc9eeceff885aac9d10be8c13fb07648be5eb.json  query-720b26fc12da26048183e94179ab7bc6fd5674792c7c9228ee7691eb458c0372.json  query-76bb468f0f979c606e3c9c35fee64bf837eca6dbb3a9a8740c73ee86c3a8244e.json  query-76bb8c37a4b70800f490361f540758055cb413da4377041c66560108a1718fc6.json  query-84f66d057fe681145ec8001d6fd1399d9b68671df079524ecea04b750fbb6844.json  query-8bd0095db84eebf465cc3632e7a042016e4d6940ff00e6c5531b1f3b1a12044e.json  query-9251ffdc87ff77ebe7022cde517a82739abe2f49214b768818517cd46206fae6.json  query-93aa804faa2724491a3aec0e77eb02bfbaf46bdc1ee426f87e4de48e88ffdfb4.json  query-95378b381c8141d03efaba3e72d0ebad1ef97cab9a5a1be8275cd13859bef43e.json  query-a5575e3e2fe3a04045baf75b89b8877f3f726a8221300e8d93e98c8b1973e9da.json  query-a9f242b145ddd8fed5fa85fbf2926c72c010ad1e9c82b544363b54cd2f404662.json  query-ad3adb8d714a8588f1270aa09f888f7521f6a8821a6cf6a2b273a9a6500ddf77.json  query-b0f1a278f9a376edc7f4337ff812898b1c33f0c850b915a0368dab6be3bba1c2.json  query-b4626a3e802f60d5448d66e6a2cb0b33234ee409b4d8edb5ba6ad8baa34ab87c.json  query-cd1d1c9ebc8416e5012d27fdb38070d97af9b5b329fa7baac1ef3a49d2a818f6.json  query-e6f715359e04943c05cb4c4da4ae1ac264df1a76fef98222c4a52ce9c826c657.json  query-eb71b72a683bceaeefe56c1ac7b1f20ffd22c3937cb04f5bbe5236d85bbaf91e.json  query-f584c0eefae97cf7241bde60e071c85a4eabe0fe2b061b65a4ac084a4ceb31bc.json
backend/migrations/: 0004_create_challenges.sql  001_initial.sql  002_presets.sql  003_user_follows.sql
backend/src/: audio_engine.rs  main.rs  websocket.rs
backend/src/db/: follows.rs  mod.rs  presets.rs  users.rs
backend/src/handlers/: challenge_handler.rs  follow_handler.rs  mod.rs  preset_handler.rs  project_handler.rs
backend/src/middleware/: auth.rs  jwt.rs
backend/src/models/: challenge.rs  mod.rs  preset.rs
backend/src/services/: challenge_service.rs  mod.rs  preset_service.rs  user_service.rs
backend/src/storage/: mod.rs
benches/: filter_bench.rs  oscillator_bench.rs  synth_bench.rs
docs/: ARCHITECTURE_PER_TRACK_EFFECTS.md  PRODUCT_BRIEF_PER_TRACK_EFFECTS.md  STORIES_PER_TRACK_EFFECTS.md
docs/release/: PACKAGING.md  (+2 more)
godot/: COMMUNITY_INTEGRATION.md  export_presets.cfg  project.godot
src/: arpeggiator.rs  audio_analysis.rs  chord_generator.rs  envelope.rs  filter.rs  gdextension.rs  lfo.rs  lib.rs  melody_generator.rs  oscillator.rs  piano_roll.rs  presets.rs  project.rs  rhythm_generator.rs  sampler.rs  send_fx.rs  song.rs  step_sequencer.rs  synth.rs  time_stretch.rs
steam_assets/: STATUS.md
task-center/: Cargo.toml
task-center/data/: tasks.json
task-center/src/: main.rs
task-center/static/: app.js  index.html  style.css
tests/: effect_tests.rs  envelope_tests.rs  filter_tests.rs  melody_generator_tests.rs  oscillator_tests.rs  synth_tests.rs
webui/: README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+125 files in other folders)
