[package]
name = "wavelet"
version = "2.3.1"
edition = "2021"
description = "WAVELET - Abstract Sound Synthesizer. A small wave, like a musical note."
authors = ["WAVELET Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# GDExtension dependencies (optional)
godot = { version = "0.2", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
gdext = ["dep:godot"]
midi_cc = []

[[bench]]
name = "oscillator_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false

[[bench]]
name = "synth_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
