[package]
name = "wavelet"
version = "2.3.1"
edition = "2021"
description = "WAVELET - Abstract Sound Synthesizer. A small wave, like a musical note."
authors = ["WAVELET Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# GDExtension dependencies (optional)
godot = { version = "0.2", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
gdext = ["dep:godot"]
wasm = [
    "dep:wasm-bindgen",
    "dep:wee_alloc",
    "dep:js-sys",
    "dep:console_error_panic_hook",
]
midi_cc = []

[[bench]]
name = "oscillator_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false

[[bench]]
name = "synth_bench"
harness = false

[profile.release]
opt-level = 3
lto = true

# WASM specific optimization
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
