[package]
name = "wavelet-backend"
version = "0.1.0"
edition = "2021"
description = "WAVELET Backend API - User, Preset, and Community services"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Configuration
dotenv = "0.15"

# Logging
env_logger = "0.11"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
